# Nura

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  README.md.backup  README.zh.md  memory-search-test-results.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup-dev-env.sh
.github/workflows/: ci.yml
config/: config.example.toml  default.example.toml
examples/feishu_bot/: README.md  config.example.json  emoji.json  run.py
nura/: __init__.py  cli.py
nura/agent/: base.py  event_driven.py  react.py  toolcall.py
nura/config/: __init__.py  env.py  loader.py  manager.py  models.py
nura/context/: __init__.py  config.py  manager.py
nura/core/: __init__.py  cache.py  config.py  logger.py  skill_queue.py
nura/event/: __init__.py  queue.py  types.py
nura/integrations/: base.py
nura/llm/: __init__.py  cache.py  client.py  constants.py  message.py  request.py  token_counter.py
nura/prompts/: __init__.py  roleplay_en.yaml  roleplay_zh.yaml
nura/sandbox/: __init__.py  client.py
nura/services/: __init__.py  base.py  messaging.py  sendable.py  tts.py  tts_service.py  utils.py
nura/skill/: __init__.py  manager.py  runner.py  types.py
nura/tool/: __init__.py  base.py  bash.py  collection.py  create_chat_completion.py  end_chat.py  file_operators.py  python_execute.py  send_file.py  send_message.py  skills.py  terminate.py  web_search.py
nura/utils/: __init__.py  config.py  image_processor.py
profiles/: assistant.yaml
skills/memory-search/: SKILL.md
skills/music-cover/: SKILL.md
tests/: conftest.py
(+85 files in other folders)
